# prometheus_zabbix_template_generator

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  prom2zabbix.py  pyproject.toml
example/: prometheus_example_output.txt  zabbix_template.json
prometheus_zabbix_template_generator/: parser.py
